passing all test cases, still need to clean up